# VerdecoraSimpleTest

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/: BRANCH_PROTECTION.md
.github/workflows/: bicep-validate.yml  build-deploy.yml  ci.yml  deploy-infra.yml  upload-web-ci.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/decisions/: decisions.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-08T1500-deployment-complete.md  20260509T222149Z-e2e-milestone.md
.squad/orchestration-log/: 2026-05-08-parker-deployment.md  20260509T221647Z-kane-burke-dallas-ripley.md
data/stores/: verdecora-stores.json
docker/: .dockerignore
docker/escalation-timer/: Dockerfile
docker/flow0-dedup/: Dockerfile
docker/github-runner/: Dockerfile
docker/hitl-webform/: Dockerfile
docker/learning/: Dockerfile
docker/orchestrator/: Dockerfile
docker/reconciliation/: Dockerfile
docker/upload-web/: Dockerfile  requirements.txt
docs/: MCP-BusinessCentral-Guia-Permisos.md  README.md  simplification-analysis.md
docs/architecture/: README.md  agents-technical-spec.md  architecture-decision-record.md  data-models.md  orchestrator-spec.md  post-mvp-agents.md  prompt-engineering.md  validation-inventory-spec.md
docs/operations/: README.md  bootstrap-guide.md  configuration-guide.md  dashboards.md  rollout-plan.md  runbook.md  upload-web-runbook.md
docs/poc/: acs-email-poc.md  bc-mcp-validation.md  extraction-benchmark.md  maf-v1-poc.md
docs/security/: identity-matrix.md
docs/user/: README.md  hitl-user-manual.md  uat-checklist.md  upload-web-manual.md
infra/: README.md
infra/bootstrap/: bootstrap.bicep  bootstrap.ps1
infra/dashboards/: overview-workbook.json  upload-web-workbook.json
infra/modules/: README.md  acr.bicep  acs.bicep  ai-foundry.bicep  alerts.bicep  container-apps.bicep  cosmos.bicep  docintell.bicep  eventgrid.bicep  frontdoor.bicep  identity.bicep  identity.json  keyvault-secrets.bicep  keyvault.bicep  main.bicep  main.json  monitoring.bicep  nat-gateway.bicep  network.bicep  private-endpoints.bicep  resource-group.bicep  runners.bicep  servicebus.bicep  storage.bicep  upload-web-app.bicep  upload-web-app.json  upload-web-auth.bicep
prerequisites/: pliego-tecnico-albaranes.html
prerequisites/analysis/: ash-maf-multiagent-patterns.md  ash-maf-research.md  bishop-llm-evaluation.md  brett-private-networking.md  burke-bc-analysis.md  call-foundry-research.md  newt-acs-email-hitl.md  newt-mcp-analysis.md  newt-workiq-hitl-analysis.md  ripley-agentic-redesign.md  ripley-requirements-analysis.md
scripts/: README.md  seed_bc_stores.py  setup-github-oidc.ps1
src/: README.md  __init__.py
src/agents/: README.md  __init__.py  communication_agent.py  factory.py  inventory_agent.py  pipeline.py  security.py
src/config/: README.md  __init__.py  agents.py  security.py
src/mcp/: README.md  __init__.py  (+1 more)
tests/: README.md  conftest.py
(+266 files in other folders)
