[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdecora-albaranes"
version = "0.1.0"
description = "Sistema Inteligente de Gestión de Albaranes con Python y MAF"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kiko de Angel", email = "kiko@verdecora.example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.2.2,<2.0",
    "aiohttp>=3.11.0",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-communication-email>=1.0.0",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.20.0",
    "azure-servicebus>=7.13.0",
    "azure-storage-blob>=12.24.0",
    "fastapi>=0.115.0",
    "itsdangerous>=2.1",
    "jinja2>=3.1.0",
    "mcp>=1.12.4",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.1",
    "PyJWT[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
all = [
    "agent-framework>=1.2.2,<2.0",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-communication-email>=1.0.0",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.20.0",
    "azure-servicebus>=7.13.0",
    "azure-storage-blob>=12.24.0",
    "fastapi>=0.115.0",
    "itsdangerous>=2.1",
    "jinja2>=3.1.0",
    "mcp>=1.12.4",
    "openai>=1.58.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "aiohttp>=3.9.0",
]

dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E203",   # whitespace before ':'
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
